// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Switch Controlled behaviour 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: inline-block;
}

.c7 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BCBCB6;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c9 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BCBCB6;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c5 {
  position: relative;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4[aria-checked='true'] .c8 {
  background-color: #0046FF;
}

.c4[aria-checked='true'] .c6 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c4[disabled] .c8,
.c4[aria-readonly] .c8 {
  background-color: #EBEBE8;
}

.c4[disabled] .c6,
.c4[aria-readonly] .c6 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c4[aria-checked='true'][aria-readonly] .c8 {
  background-color: rgba(0,70,255,0.1);
}

<label
  className="c0"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        Notify me by email
      </span>
    </span>
    <span
      className="c2"
    >
      <button
        aria-checked={true}
        className="NormalizedButton__Button-ey7f5x-0 c4"
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="c5"
        >
          <span
            className="c6 c7"
          />
          <span
            className="c8 c9"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;

exports[`Storyshots Molecules / Switch Default Off 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: inline-block;
}

.c7 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BCBCB6;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c9 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BCBCB6;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c5 {
  position: relative;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4[aria-checked='true'] .c8 {
  background-color: #0046FF;
}

.c4[aria-checked='true'] .c6 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c4[disabled] .c8,
.c4[aria-readonly] .c8 {
  background-color: #EBEBE8;
}

.c4[disabled] .c6,
.c4[aria-readonly] .c6 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c4[aria-checked='true'][aria-readonly] .c8 {
  background-color: rgba(0,70,255,0.1);
}

<label
  className="c0"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        Notify me by email
      </span>
    </span>
    <span
      className="c2"
    >
      <button
        aria-checked={false}
        className="NormalizedButton__Button-ey7f5x-0 c4"
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="c5"
        >
          <span
            className="c6 c7"
          />
          <span
            className="c8 c9"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;

exports[`Storyshots Molecules / Switch Default On 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: inline-block;
}

.c7 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BCBCB6;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c9 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BCBCB6;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c5 {
  position: relative;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4[aria-checked='true'] .c8 {
  background-color: #0046FF;
}

.c4[aria-checked='true'] .c6 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c4[disabled] .c8,
.c4[aria-readonly] .c8 {
  background-color: #EBEBE8;
}

.c4[disabled] .c6,
.c4[aria-readonly] .c6 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c4[aria-checked='true'][aria-readonly] .c8 {
  background-color: rgba(0,70,255,0.1);
}

<label
  className="c0"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        Notify me by email
      </span>
    </span>
    <span
      className="c2"
    >
      <button
        aria-checked={true}
        className="NormalizedButton__Button-ey7f5x-0 c4"
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="c5"
        >
          <span
            className="c6 c7"
          />
          <span
            className="c8 c9"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;

exports[`Storyshots Molecules / Switch Disabled 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: inline-block;
}

.c7 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BCBCB6;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c9 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BCBCB6;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c5 {
  position: relative;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4[aria-checked='true'] .c8 {
  background-color: #0046FF;
}

.c4[aria-checked='true'] .c6 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c4[disabled] .c8,
.c4[aria-readonly] .c8 {
  background-color: #EBEBE8;
}

.c4[disabled] .c6,
.c4[aria-readonly] .c6 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c4[aria-checked='true'][aria-readonly] .c8 {
  background-color: rgba(0,70,255,0.1);
}

<label
  className="c0"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        Notify me by email
      </span>
    </span>
    <span
      className="c2"
    >
      <button
        aria-checked={false}
        className="NormalizedButton__Button-ey7f5x-0 c4"
        disabled={true}
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="c5"
        >
          <span
            className="c6 c7"
          />
          <span
            className="c8 c9"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;

exports[`Storyshots Molecules / Switch Read Only 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  display: inline-block;
}

.c10 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BCBCB6;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c12 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BCBCB6;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c8 {
  position: relative;
}

.c7 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c7,
.c7[type='button'],
.c7[type='reset'],
.c7[type='submit'] {
  -webkit-appearance: button;
}

.c7::-moz-focus-inner,
.c7[type='button']::-moz-focus-inner,
.c7[type='reset']::-moz-focus-inner,
.c7[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7:-moz-focusring,
.c7[type='button']:-moz-focusring,
.c7[type='reset']:-moz-focusring,
.c7[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7[aria-checked='true'] .c11 {
  background-color: #0046FF;
}

.c7[aria-checked='true'] .c9 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c7[disabled] .c11,
.c7[aria-readonly] .c11 {
  background-color: #EBEBE8;
}

.c7[disabled] .c9,
.c7[aria-readonly] .c9 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c7[aria-checked='true'][aria-readonly] .c11 {
  background-color: rgba(0,70,255,0.1);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Off
    </div>
    <div>
      <label
        className="c3"
      >
        <span
          className="c4"
        >
          <span
            className="c5"
          >
            <span
              className="c6"
            >
              Necessary cookies
            </span>
          </span>
          <span
            className="c5"
          >
            <button
              aria-checked={false}
              aria-readonly={true}
              className="NormalizedButton__Button-ey7f5x-0 c7"
              onClick={[Function]}
              role="switch"
              type="button"
            >
              <div
                className="c8"
              >
                <span
                  className="c9 c10"
                />
                <span
                  className="c11 c12"
                />
              </div>
            </button>
          </span>
        </span>
      </label>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      On
    </div>
    <div>
      <label
        className="c3"
      >
        <span
          className="c4"
        >
          <span
            className="c5"
          >
            <span
              className="c6"
            >
              Necessary cookies
            </span>
          </span>
          <span
            className="c5"
          >
            <button
              aria-checked={true}
              aria-readonly={true}
              className="NormalizedButton__Button-ey7f5x-0 c7"
              onClick={[Function]}
              role="switch"
              type="button"
            >
              <div
                className="c8"
              >
                <span
                  className="c9 c10"
                />
                <span
                  className="c11 c12"
                />
              </div>
            </button>
          </span>
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Switch With Label prop as ReactNode 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  display: inline-block;
}

.c7 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BCBCB6;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c9 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BCBCB6;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c5 {
  position: relative;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4[aria-checked='true'] .c8 {
  background-color: #0046FF;
}

.c4[aria-checked='true'] .c6 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c4[disabled] .c8,
.c4[aria-readonly] .c8 {
  background-color: #EBEBE8;
}

.c4[disabled] .c6,
.c4[aria-readonly] .c6 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c4[aria-checked='true'][aria-readonly] .c8 {
  background-color: rgba(0,70,255,0.1);
}

<label
  className="c0"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        Notify me by email
      </span>
    </span>
    <span
      className="c2"
    >
      <button
        aria-checked={false}
        className="NormalizedButton__Button-ey7f5x-0 c4"
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="c5"
        >
          <span
            className="c6 c7"
          />
          <span
            className="c8 c9"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;

exports[`Storyshots Molecules / Switch With hidden label 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: inline-block;
}

.c8 {
  background: white;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  top: 50%;
  left: 0;
  border: 1px solid #BCBCB6;
  margin-top: -12px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c10 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #BCBCB6;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c6 {
  position: relative;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5[aria-checked='true'] .c9 {
  background-color: #0046FF;
}

.c5[aria-checked='true'] .c7 {
  -webkit-transform: translate(16px);
  -ms-transform: translate(16px);
  transform: translate(16px);
}

.c5[disabled] .c9,
.c5[aria-readonly] .c9 {
  background-color: #EBEBE8;
}

.c5[disabled] .c7,
.c5[aria-readonly] .c7 {
  border: 1px solid #EBEBE8;
  background-color: #F5F5F5;
}

.c5[aria-checked='true'][aria-readonly] .c9 {
  background-color: rgba(0,70,255,0.1);
}

<label
  className="c0"
>
  <span
    className="c1"
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        <span
          className="c4"
        >
          Notify me by email
        </span>
      </div>
    </span>
    <span
      className="c2"
    >
      <button
        aria-checked={false}
        className="NormalizedButton__Button-ey7f5x-0 c5"
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="c6"
        >
          <span
            className="c7 c8"
          />
          <span
            className="c9 c10"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;
